# PWSchatapp

./: .breakpoints  delt.py  file.key  firstsetup.py  main.py  pyproject.toml  system.py  zInfo.text
backup/: app (copy).py  delt (copy).py  firstsetup (copy).py  main (copy).py  xx.py
