[tool.poetry]
name = "repl_nix_PWS-chatapp"
version = "0.1.0"
description = ""
authors = ["Merijnvan2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^36.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
